# xeque-engine

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PORTFOLIO_STANDARD.md  README.md
.claude/skills/new-engine/: SKILL.md
.github/workflows/: ci.yml  deploy.yml
crates/xeque-bench/: Cargo.toml
crates/xeque-bench/benches/: nps.rs
crates/xeque-bench/src/: lib.rs
crates/xeque-core/: Cargo.toml
crates/xeque-core/src/: board.rs  engine.rs  eval.rs  lib.rs
crates/xeque-core/tests/: perft.rs
crates/xeque-engines/: Cargo.toml
crates/xeque-engines/src/: lib.rs  v0_random.rs  v1_minimax.rs  v2_alphabeta.rs
crates/xeque-uci/: Cargo.toml
crates/xeque-uci/src/: main.rs
crates/xeque-wasm/: Cargo.toml
crates/xeque-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  ENGINES.md  REFERENCES.md  ROADMAP.md  V1_KICKOFF.md
docs/media/: README.md
docs/superpowers/plans/: 2026-06-10-docs-overhaul.md
docs/superpowers/specs/: 2026-06-10-docs-overhaul-design.md
web/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/components/: Board.tsx  EngineSelect.tsx  ErrorBoundary.tsx
web/src/engine/: api.ts  elo.ts  worker.ts
web/src/modes/: Analysis.tsx  Arena.tsx  Lab.tsx  Perft.tsx  Play.tsx
