[workspace]
resolver = "2"
members = [
    "crates/xeque-core",
    "crates/xeque-engines",
    "crates/xeque-uci",
    "crates/xeque-wasm",
    "crates/xeque-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Rodrigo Medeiros <rodrigomedeiros2002@gmail.com>"]
repository = "https://github.com/rodme02/xeque-engine"
rust-version = "1.75"

[workspace.dependencies]
cozy-chess = "0.3"
rand = { version = "0.8", features = ["small_rng"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `std::time::Instant::now()` panics on wasm32-unknown-unknown. web-time is
# a drop-in replacement that uses performance.now() on wasm and std::time on
# native, so engine code can be platform-agnostic.
web-time = "1"

xeque-core = { path = "crates/xeque-core" }
xeque-engines = { path = "crates/xeque-engines" }

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"

[profile.bench]
lto = "fat"
codegen-units = 1
