[package]
name = "xeque-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared types and the Engine trait for the xeque-engine collection."

[dependencies]
cozy-chess = { workspace = true }
thiserror = { workspace = true }
