[package]
name = "xeque-engines"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The collection of chess engines, each behind the Engine trait."

[dependencies]
xeque-core = { workspace = true }
cozy-chess = { workspace = true }
rand = { workspace = true }
web-time = { workspace = true }
